tests-system/rbt-tuple-field-types/output
cdr optional List
             ^^^^ rbt-tuple-field-types/foo.rsl:6: error: unknown symbol List
Processed 1 model and 0 requirement files and found 1 error
